# intelligent-router

./: CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  FEATURES.md  GOOGLE_MAPS_SETUP.md  README.md  TESTING_CHECKLIST.md  app.py  pyproject.toml  requirements.txt  streamlit_app.py  test_csv_processing.py
.github/: copilot-instructions.md
data/: amazon_test_dataset.csv  amazon_test_dataset_medium.csv  amazon_test_dataset_small.csv  geocode_cache.csv
delivery_solver/: pyvenv.cfg
delivery_solver/Scripts/: activate  activate.bat
docs/: DOCUMENTATION.md  ROUTING_PROVIDERS.md  SYSTEM_DOCUMENTATION.md  data_description.md  index.html
docs/static_site/: README.md  index.html
example/: simulator.py
model/config/: model_params.txt  network_params.txt  simulation_params.txt
model/graph_creator/: graph_creator.py
model/optimizer/: alns_solver.py  delivery_model.py  local_search.py  route_edit.py  route_solution.py
model/utils/: generate_requirements.py  geocoder.py  pre_processing.py  project_utils.py  run_storage.py  utils.py
parcel_env/: pyvenv.cfg
python=3.12/: pyvenv.cfg
results/optimization/: routes_20251217_140039.html  solution16_08152023-08152023.npy  solution4_08152023-08162023.npy  solution4_08152023-10112023.npy  solution4_08152023-10182023.npy
results/runs/run_20251218_170115/: run.json  state.json
results/runs/run_20251218_172730/: run.json  state.json
results/runs/run_20251218_173555/: run.json  state.json
results/runs/run_20251218_174527/: run.json  state.json
results/runs/run_20251218_174949/: run.json  state.json
results/runs/run_20251218_175123/: run.json  state.json
results/runs/run_20251218_175450/: run.json  state.json
results/runs/run_20251218_175846/: run.json  state.json
results/runs/run_20251218_182546/: run.json  state.json
results/runs/run_20251218_183110/: run.json  state.json
results/runs/run_20251218_185050/: run.json  state.json
results/runs/run_20251218_185929/: run.json
results/runs/run_20251218_190012/: run.json  state.json
results/runs/run_20251218_190324/: run.json  state.json
results/runs/run_20251218_190341/: run.json
results/runs/run_20251218_190444/: run.json
results/runs/run_20251218_190609/: run.json  state.json
results/runs/run_20251218_190622/: run.json
results/runs/run_20251218_190940/: run.json
results/runs/run_20251218_191032/: run.json  state.json
results/runs/run_20251218_191317/: run.json  state.json
src/: model_params.txt  network_params.txt  simulation.py  simulation_params.txt  simulator.py
src/config/: model_params.txt  network_params.txt
src/graph_creator/: graph_creator.py
src/model/: delivery_model.py
src/modeling/: delivery_model
src/utils/: utils.py
uploads/: processed_20251217_140911.csv  processed_20251217_141236.csv  processed_20251217_141726.csv  processed_20251217_142129.csv  processed_20251217_181923.csv  processed_20251218_194531.csv  temp_20251217_133336.csv  temp_20251217_133518.csv  temp_20251217_133735.csv  temp_20251217_134105.csv  temp_20251217_134208.csv  temp_20251217_134217.csv  temp_20251217_134436.csv  temp_20251217_134556.csv  temp_20251217_134606.csv  temp_20251217_134625.csv  temp_20251217_134635.csv  temp_20251217_134731.csv  temp_20251217_134740.csv  temp_20251217_134753.csv  temp_20251217_134802.csv  temp_20251217_134951.csv  temp_20251217_135151.csv  temp_20251217_135413.csv  temp_20251217_135539.csv  temp_20251217_135549.csv  temp_20251217_135650.csv  temp_20251217_135832.csv  temp_20251217_135933.csv  temp_20251217_140343.csv  vendors_20251217_134215.csv  vendors_20251218_191156.csv
venv_name/Scripts/: activate  activate.bat
web/: index.html  index_institutional.html  index_original_backup.html
(+61 files in other folders)
